# niwanowa-RSSFeed

./: .gitignore  README.md  log.json  pyproject.toml  samconfig.toml  template.yaml
niwanowa-rssfeed-api/: swagger.yaml
niwanowa-rssfeed-functions/get/: get.py
niwanowa-rssfeed-functions/post/: post.py  requirements.txt
niwanowa-rssfeed-functions/reset/: requirements.txt  reset.py
niwanowa_rssfeed_api/: swagger.yaml
niwanowa_rssfeed_functions/: delete.py  post.py  put.py
niwanowa_rssfeed_functions/delete/: delete.py
niwanowa_rssfeed_functions/get/: get.py
niwanowa_rssfeed_functions/post/: post.py
niwanowa_rssfeed_functions/reset/: reset.py
